--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,17 +82,10 @@
 html,
 body {
   max-width: 100vw;
+  height: 100%;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  background: white;
 }
 
 a {
