--- a/src/components/HomePage/homepage.module.css
+++ b/src/components/HomePage/homepage.module.css
@@ -62,6 +62,10 @@
   font-size: 5rem;
   font-weight: 100;
   font-family: 'Canel';
+  transition: color 0.3s ease-in-out;
+}
+.post-title:hover {
+  color: #0f6cff;
 }
 
 .post-excerpt {
