--- a/src/components/HomePage/homepage.module.css
+++ b/src/components/HomePage/homepage.module.css
@@ -71,7 +71,7 @@
 .post-excerpt {
   margin: 1rem 0;
   font-size: 1.1rem;
-  font-family: Helvetica Neue UltraLight;
+  font-family: 'Helvetica-Neue';
   font-weight: 700;
   letter-spacing: 0.1rem;
   line-height: 1.7rem;
