--- a/src/components/HomePage/homepage.module.css
+++ b/src/components/HomePage/homepage.module.css
@@ -105,6 +105,7 @@
         flex-direction: column-reverse;
         background: #05003f;
         border-radius: 25px;
+        height: 100%;
     }
 
     .post-excerpt {
