--- a/src/components/BlogPostPage/blogpostpage.module.css
+++ b/src/components/BlogPostPage/blogpostpage.module.css
@@ -47,7 +47,7 @@
 
 .content {
   font-size: 1.3rem;
-  font-family: Helvetica Neue UltraLight;
+  font-family: 'Helvetica-Neue';
   font-weight: 700;
   letter-spacing: 0.1rem;
   line-height: 2.5rem;
